@@ -545,353 +545,11 @@ to find an alternative output format that is suitable.
 .
 */
 
-/* All known xvecs (even those that don't compile on all systems).
-   Alphabetized for easy reference.
-   They are listed a second time below, since
-   we can't intermix extern's and initializers.  */
-extern const bfd_target a_out_adobe_vec;
-extern const bfd_target aix5coff64_vec;
-extern const bfd_target aout0_big_vec;
-extern const bfd_target aout_arm_big_vec;
-extern const bfd_target aout_arm_little_vec;
-extern const bfd_target aout_mips_big_vec;
-extern const bfd_target aout_mips_little_vec;
-extern const bfd_target apollocoff_vec;
-extern const bfd_target arm_epoc_pe_big_vec;
-extern const bfd_target arm_epoc_pe_little_vec;
-extern const bfd_target arm_epoc_pei_big_vec;
-extern const bfd_target arm_epoc_pei_little_vec;
-extern const bfd_target arm_wince_pe_big_vec;
-extern const bfd_target arm_wince_pe_little_vec;
-extern const bfd_target arm_wince_pei_big_vec;
-extern const bfd_target arm_wince_pei_little_vec;
-extern const bfd_target armcoff_big_vec;
-extern const bfd_target armcoff_little_vec;
-extern const bfd_target armnetbsd_vec;
-extern const bfd_target armpe_big_vec;
-extern const bfd_target armpe_little_vec;
-extern const bfd_target armpei_big_vec;
-extern const bfd_target armpei_little_vec;
 extern const bfd_target asxxxx_vec;
-extern const bfd_target b_out_vec_big_host;
-extern const bfd_target b_out_vec_little_host;
-extern const bfd_target bfd_pei_ia64_vec;
-extern const bfd_target bfd_elf32_avr_vec;
-extern const bfd_target bfd_elf32_bfin_vec;
-extern const bfd_target bfd_elf32_bfinfdpic_vec;
-extern const bfd_target bfd_elf32_big_generic_vec;
-extern const bfd_target bfd_elf32_bigarc_vec;
-extern const bfd_target bfd_elf32_bigarm_vec;
-extern const bfd_target bfd_elf32_bigarm_nacl_vec;
-extern const bfd_target bfd_elf32_bigarm_symbian_vec;
-extern const bfd_target bfd_elf32_bigarm_vxworks_vec;
-extern const bfd_target bfd_elf32_bigmips_vec;
-extern const bfd_target bfd_elf32_bigmips_vxworks_vec;
-extern const bfd_target bfd_elf32_cr16_vec;
-extern const bfd_target bfd_elf32_cr16c_vec;
-extern const bfd_target bfd_elf32_cris_vec;
-extern const bfd_target bfd_elf32_crx_vec;
-extern const bfd_target bfd_elf32_d10v_vec;
-extern const bfd_target bfd_elf32_d30v_vec;
-extern const bfd_target bfd_elf32_dlx_big_vec;
-extern const bfd_target bfd_elf32_epiphany_vec;
-extern const bfd_target bfd_elf32_fr30_vec;
-extern const bfd_target bfd_elf32_frv_vec;
-extern const bfd_target bfd_elf32_frvfdpic_vec;
-extern const bfd_target bfd_elf32_moxie_vec;
-extern const bfd_target bfd_elf32_h8300_vec;
-extern const bfd_target bfd_elf32_hppa_linux_vec;
-extern const bfd_target bfd_elf32_hppa_nbsd_vec;
-extern const bfd_target bfd_elf32_hppa_vec;
-extern const bfd_target bfd_elf32_i370_vec;
-extern const bfd_target bfd_elf32_i386_freebsd_vec;
-extern const bfd_target bfd_elf32_i386_nacl_vec;
-extern const bfd_target bfd_elf32_i386_sol2_vec;
-extern const bfd_target bfd_elf32_i386_vxworks_vec;
-extern const bfd_target bfd_elf32_i386_vec;
-extern const bfd_target bfd_elf32_i860_little_vec;
-extern const bfd_target bfd_elf32_i860_vec;
-extern const bfd_target bfd_elf32_i960_vec;
-extern const bfd_target bfd_elf32_ia64_big_vec;
-extern const bfd_target bfd_elf32_ia64_hpux_big_vec;
-extern const bfd_target bfd_elf32_ip2k_vec;
-extern const bfd_target bfd_elf32_iq2000_vec;
-extern const bfd_target bfd_elf32_lm32_vec;
-extern const bfd_target bfd_elf32_lm32fdpic_vec;
-extern const bfd_target bfd_elf32_little_generic_vec;
-extern const bfd_target bfd_elf32_littlearc_vec;
-extern const bfd_target bfd_elf32_littlearm_vec;
-extern const bfd_target bfd_elf32_littlearm_nacl_vec;
-extern const bfd_target bfd_elf32_littlearm_symbian_vec;
-extern const bfd_target bfd_elf32_littlearm_vxworks_vec;
-extern const bfd_target bfd_elf32_littlemips_vec;
-extern const bfd_target bfd_elf32_littlemips_vxworks_vec;
-extern const bfd_target bfd_elf32_m32c_vec;
-extern const bfd_target bfd_elf32_m32r_vec;
-extern const bfd_target bfd_elf32_m32rle_vec;
-extern const bfd_target bfd_elf32_m32rlin_vec;
-extern const bfd_target bfd_elf32_m32rlelin_vec;
-extern const bfd_target bfd_elf32_m68hc11_vec;
-extern const bfd_target bfd_elf32_m68hc12_vec;
-extern const bfd_target bfd_elf32_m68k_vec;
-extern const bfd_target bfd_elf32_m88k_vec;
-extern const bfd_target bfd_elf32_mcore_big_vec;
-extern const bfd_target bfd_elf32_mcore_little_vec;
-extern const bfd_target bfd_elf32_mep_vec;
-extern const bfd_target bfd_elf32_mep_little_vec;
-extern const bfd_target bfd_elf32_microblaze_vec;
-extern const bfd_target bfd_elf32_mn10200_vec;
-extern const bfd_target bfd_elf32_mn10300_vec;
-extern const bfd_target bfd_elf32_mt_vec;
-extern const bfd_target bfd_elf32_msp430_vec;
-extern const bfd_target bfd_elf32_nbigmips_vec;
-extern const bfd_target bfd_elf32_nlittlemips_vec;
-extern const bfd_target bfd_elf32_ntradbigmips_vec;
-extern const bfd_target bfd_elf32_ntradlittlemips_vec;
-extern const bfd_target bfd_elf32_ntradbigmips_freebsd_vec;
-extern const bfd_target bfd_elf32_ntradlittlemips_freebsd_vec;
-extern const bfd_target bfd_elf32_openrisc_vec;
-extern const bfd_target bfd_elf32_or32_big_vec;
-extern const bfd_target bfd_elf32_pj_vec;
-extern const bfd_target bfd_elf32_pjl_vec;
-extern const bfd_target bfd_elf32_powerpc_vec;
-extern const bfd_target bfd_elf32_powerpcle_vec;
-extern const bfd_target bfd_elf32_powerpc_freebsd_vec;
-extern const bfd_target bfd_elf32_powerpc_vxworks_vec;
-extern const bfd_target bfd_elf32_rl78_vec;
-extern const bfd_target bfd_elf32_rx_le_vec;
-extern const bfd_target bfd_elf32_rx_be_vec;
-extern const bfd_target bfd_elf32_rx_be_ns_vec;
-extern const bfd_target bfd_elf32_s390_vec;
-extern const bfd_target bfd_elf32_bigscore_vec;
-extern const bfd_target bfd_elf32_littlescore_vec;
-extern const bfd_target bfd_elf32_sh64_vec;
-extern const bfd_target bfd_elf32_sh64l_vec;
-extern const bfd_target bfd_elf32_sh64lin_vec;
-extern const bfd_target bfd_elf32_sh64blin_vec;
-extern const bfd_target bfd_elf32_sh64lnbsd_vec;
-extern const bfd_target bfd_elf32_sh64nbsd_vec;
-extern const bfd_target bfd_elf32_sh_vec;
-extern const bfd_target bfd_elf32_shbfd_vec;
-extern const bfd_target bfd_elf32_shblin_vec;
-extern const bfd_target bfd_elf32_shfd_vec;
-extern const bfd_target bfd_elf32_shl_vec;
-extern const bfd_target bfd_elf32_shl_symbian_vec;
-extern const bfd_target bfd_elf32_shlin_vec;
-extern const bfd_target bfd_elf32_shlnbsd_vec;
-extern const bfd_target bfd_elf32_shlvxworks_vec;
-extern const bfd_target bfd_elf32_shnbsd_vec;
-extern const bfd_target bfd_elf32_shvxworks_vec;
-extern const bfd_target bfd_elf32_sparc_vec;
-extern const bfd_target bfd_elf32_sparc_sol2_vec;
-extern const bfd_target bfd_elf32_sparc_vxworks_vec;
-extern const bfd_target bfd_elf32_spu_vec;
-extern const bfd_target bfd_elf32_tic6x_be_vec;
-extern const bfd_target bfd_elf32_tic6x_le_vec;
-extern const bfd_target bfd_elf32_tic6x_elf_be_vec;
-extern const bfd_target bfd_elf32_tic6x_elf_le_vec;
-extern const bfd_target bfd_elf32_tic6x_linux_be_vec;
-extern const bfd_target bfd_elf32_tic6x_linux_le_vec;
-extern const bfd_target bfd_elf32_tilegx_be_vec;
-extern const bfd_target bfd_elf32_tilegx_le_vec;
-extern const bfd_target bfd_elf32_tilepro_vec;
-extern const bfd_target bfd_elf32_tradbigmips_vec;
-extern const bfd_target bfd_elf32_tradlittlemips_vec;
-extern const bfd_target bfd_elf32_tradbigmips_freebsd_vec;
-extern const bfd_target bfd_elf32_tradlittlemips_freebsd_vec;
-extern const bfd_target bfd_elf32_us_cris_vec;
-extern const bfd_target bfd_elf32_v850_vec;
-extern const bfd_target bfd_elf32_vax_vec;
-extern const bfd_target bfd_elf32_xc16x_vec;
-extern const bfd_target bfd_elf32_xgate_vec;
-extern const bfd_target bfd_elf32_xstormy16_vec;
-extern const bfd_target bfd_elf32_xtensa_be_vec;
-extern const bfd_target bfd_elf32_xtensa_le_vec;
-extern const bfd_target bfd_elf64_alpha_freebsd_vec;
-extern const bfd_target bfd_elf64_alpha_vec;
-extern const bfd_target bfd_elf64_big_generic_vec;
-extern const bfd_target bfd_elf64_bigmips_vec;
-extern const bfd_target bfd_elf64_bigaarch64_vec;
-extern const bfd_target bfd_elf64_hppa_linux_vec;
-extern const bfd_target bfd_elf64_hppa_vec;
-extern const bfd_target bfd_elf64_ia64_big_vec;
-extern const bfd_target bfd_elf64_ia64_hpux_big_vec;
-extern const bfd_target bfd_elf64_ia64_little_vec;
-extern const bfd_target bfd_elf64_ia64_vms_vec;
-extern const bfd_target bfd_elf64_little_generic_vec;
-extern const bfd_target bfd_elf64_littlemips_vec;
-extern const bfd_target bfd_elf64_littleaarch64_vec;
-extern const bfd_target bfd_elf64_mmix_vec;
-extern const bfd_target bfd_elf64_powerpc_vec;
-extern const bfd_target bfd_elf64_powerpcle_vec;
-extern const bfd_target bfd_elf64_powerpc_freebsd_vec;
-extern const bfd_target bfd_elf64_s390_vec;
-extern const bfd_target bfd_elf64_sh64_vec;
-extern const bfd_target bfd_elf64_sh64l_vec;
-extern const bfd_target bfd_elf64_sh64lin_vec;
-extern const bfd_target bfd_elf64_sh64blin_vec;
-extern const bfd_target bfd_elf64_sh64lnbsd_vec;
-extern const bfd_target bfd_elf64_sh64nbsd_vec;
-extern const bfd_target bfd_elf64_sparc_vec;
-extern const bfd_target bfd_elf64_sparc_freebsd_vec;
-extern const bfd_target bfd_elf64_sparc_sol2_vec;
-extern const bfd_target bfd_elf64_tilegx_be_vec;
-extern const bfd_target bfd_elf64_tilegx_le_vec;
-extern const bfd_target bfd_elf64_tradbigmips_vec;
-extern const bfd_target bfd_elf64_tradlittlemips_vec;
-extern const bfd_target bfd_elf64_tradbigmips_freebsd_vec;
-extern const bfd_target bfd_elf64_tradlittlemips_freebsd_vec;
-extern const bfd_target bfd_elf64_x86_64_freebsd_vec;
-extern const bfd_target bfd_elf64_x86_64_nacl_vec;
-extern const bfd_target bfd_elf64_x86_64_sol2_vec;
-extern const bfd_target bfd_elf64_x86_64_vec;
-extern const bfd_target bfd_elf32_x86_64_nacl_vec;
-extern const bfd_target bfd_elf32_x86_64_vec;
-extern const bfd_target bfd_elf64_l1om_freebsd_vec;
-extern const bfd_target bfd_elf64_l1om_vec;
-extern const bfd_target bfd_elf64_k1om_freebsd_vec;
-extern const bfd_target bfd_elf64_k1om_vec;
-extern const bfd_target bfd_mmo_vec;
-extern const bfd_target bfd_powerpc_pe_vec;
-extern const bfd_target bfd_powerpc_pei_vec;
-extern const bfd_target bfd_powerpcle_pe_vec;
-extern const bfd_target bfd_powerpcle_pei_vec;
-extern const bfd_target cris_aout_vec;
-extern const bfd_target demo_64_vec;
-extern const bfd_target ecoff_big_vec;
-extern const bfd_target ecoff_biglittle_vec;
-extern const bfd_target ecoff_little_vec;
-extern const bfd_target ecoffalpha_little_vec;
-extern const bfd_target go32coff_vec;
-extern const bfd_target go32stubbedcoff_vec;
-extern const bfd_target h8300coff_vec;
-extern const bfd_target h8500coff_vec;
-extern const bfd_target host_aout_vec;
-extern const bfd_target hp300bsd_vec;
-extern const bfd_target hp300hpux_vec;
-extern const bfd_target i386aout_vec;
-extern const bfd_target i386bsd_vec;
-extern const bfd_target i386coff_vec;
-extern const bfd_target i386dynix_vec;
-extern const bfd_target i386freebsd_vec;
-extern const bfd_target i386linux_vec;
-extern const bfd_target i386lynx_aout_vec;
-extern const bfd_target i386lynx_coff_vec;
-extern const bfd_target i386mach3_vec;
-extern const bfd_target i386msdos_vec;
-extern const bfd_target i386netbsd_vec;
-extern const bfd_target i386os9k_vec;
-extern const bfd_target i386pe_vec;
-extern const bfd_target i386pei_vec;
-extern const bfd_target i860coff_vec;
-extern const bfd_target icoff_big_vec;
-extern const bfd_target icoff_little_vec;
-extern const bfd_target ieee_vec;
-extern const bfd_target m68k4knetbsd_vec;
-extern const bfd_target m68kaux_coff_vec;
-extern const bfd_target m68kcoff_vec;
-extern const bfd_target m68kcoffun_vec;
-extern const bfd_target m68klinux_vec;
-extern const bfd_target m68knetbsd_vec;
-extern const bfd_target m68ksysvcoff_vec;
-extern const bfd_target m88kbcs_vec;
-extern const bfd_target m88kmach3_vec;
-extern const bfd_target m88kopenbsd_vec;
-extern const bfd_target mach_o_be_vec;
-extern const bfd_target mach_o_le_vec;
-extern const bfd_target mach_o_fat_vec;
-extern const bfd_target mach_o_i386_vec;
-extern const bfd_target mach_o_x86_64_vec;
-extern const bfd_target mcore_pe_big_vec;
-extern const bfd_target mcore_pe_little_vec;
-extern const bfd_target mcore_pei_big_vec;
-extern const bfd_target mcore_pei_little_vec;
-extern const bfd_target mipslpe_vec;
-extern const bfd_target mipslpei_vec;
-extern const bfd_target newsos3_vec;
-extern const bfd_target nlm32_alpha_vec;
-extern const bfd_target nlm32_i386_vec;
-extern const bfd_target nlm32_powerpc_vec;
-extern const bfd_target nlm32_sparc_vec;
-extern const bfd_target oasys_vec;
-extern const bfd_target or32coff_big_vec;
-extern const bfd_target pc532machaout_vec;
-extern const bfd_target pc532netbsd_vec;
-extern const bfd_target pdp11_aout_vec;
-extern const bfd_target pef_vec;
-extern const bfd_target pef_xlib_vec;
-extern const bfd_target plugin_vec;
-extern const bfd_target pmac_xcoff_vec;
-extern const bfd_target ppcboot_vec;
-extern const bfd_target riscix_vec;
-extern const bfd_target rs6000coff64_vec;
-extern const bfd_target rs6000coff_vec;
-extern const bfd_target shcoff_small_vec;
-extern const bfd_target shcoff_vec;
-extern const bfd_target shlcoff_small_vec;
-extern const bfd_target shlcoff_vec;
-extern const bfd_target shlpe_vec;
-extern const bfd_target shlpei_vec;
-extern const bfd_target som_vec;
-extern const bfd_target sparccoff_vec;
-extern const bfd_target sparcle_aout_vec;
-extern const bfd_target sparclinux_vec;
-extern const bfd_target sparclynx_aout_vec;
-extern const bfd_target sparclynx_coff_vec;
-extern const bfd_target sparcnetbsd_vec;
-extern const bfd_target sunos_big_vec;
-extern const bfd_target sym_vec;
-extern const bfd_target tic30_aout_vec;
-extern const bfd_target tic30_coff_vec;
-extern const bfd_target tic4x_coff0_beh_vec;
-extern const bfd_target tic4x_coff0_vec;
-extern const bfd_target tic4x_coff1_beh_vec;
-extern const bfd_target tic4x_coff1_vec;
-extern const bfd_target tic4x_coff2_beh_vec;
-extern const bfd_target tic4x_coff2_vec;
-extern const bfd_target tic54x_coff0_beh_vec;
-extern const bfd_target tic54x_coff0_vec;
-extern const bfd_target tic54x_coff1_beh_vec;
-extern const bfd_target tic54x_coff1_vec;
-extern const bfd_target tic54x_coff2_beh_vec;
-extern const bfd_target tic54x_coff2_vec;
-extern const bfd_target tic80coff_vec;
-extern const bfd_target vaxbsd_vec;
-extern const bfd_target vaxnetbsd_vec;
-extern const bfd_target vax1knetbsd_vec;
-extern const bfd_target versados_vec;
-extern const bfd_target vms_alpha_vec;
-extern const bfd_target vms_lib_txt_vec;
-extern const bfd_target w65_vec;
-extern const bfd_target we32kcoff_vec;
-extern const bfd_target x86_64pe_vec;
-extern const bfd_target x86_64pei_vec;
-extern const bfd_target x86_64coff_vec;
-extern const bfd_target z80coff_vec;
-extern const bfd_target z8kcoff_vec;
-
 /* These are always included.  */
 extern const bfd_target srec_vec;
-extern const bfd_target verilog_vec;
 extern const bfd_target symbolsrec_vec;
-extern const bfd_target tekhex_vec;
-extern const bfd_target binary_vec;
 extern const bfd_target ihex_vec;
-
-/* All of the xvecs for core files.  */
-extern const bfd_target aix386_core_vec;
-extern const bfd_target cisco_core_big_vec;
-extern const bfd_target cisco_core_little_vec;
-extern const bfd_target hppabsd_core_vec;
-extern const bfd_target hpux_core_vec;
-extern const bfd_target irix_core_vec;
-extern const bfd_target netbsd_core_vec;
-extern const bfd_target osf_core_vec;
-extern const bfd_target ptrace_core_vec;
-extern const bfd_target sco5_core_vec;
-extern const bfd_target trad_core_vec;
-
-extern const bfd_target bfd_elf32_am33lin_vec;
 static const bfd_target * const _bfd_target_vector[] =
 {
 //#ifdef SELECT_VECS
@@ -923,6 +581,8 @@ const bfd_target *bfd_default_vector[] = {
 //#ifdef DEFAULT_VECTOR
 #if 0
 	&DEFAULT_VECTOR,
+#else
+	&asxxxx_vec,
 #endif
 	NULL
 };
